<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/change_volume_dialog_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_volume_status_dialog_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />



    <LinearLayout
        android:id="@+id/change_volume_dialog_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:layout_below="@id/change_volume_dialog_title_textview"
        android:gravity="center">

        <TextView
            android:id="@+id/change_volume_dialog_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_volume_dialog_status"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/change_volume_dialog_status_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/add_volume_spinner_options"
            android:textAlignment="textEnd"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_change_volume_dialog_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_below="@id/change_volume_dialog_linear_layout"
        android:paddingEnd="25dp"
        android:gravity="end"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/change_volume_dialog_confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/add_volume_dialog_confirm"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/change_volume_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_volume_dialog_cancel"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</RelativeLayout>